log
Tue, Mar 25, 2025  1:06:13 PM: 
 list.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list = NULL || list->head == NULL) return NULL;
              ^
list.c:40:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list = NULL || list->head == NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Tue, Mar 25, 2025  1:06:27 PM: 
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list = NULL || list->head == NULL) return NULL;
              ^
list.c:40:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list = NULL || list->head == NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
1cb99af
Tue, Mar 25, 2025  1:06:40 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb85816
Tue, Mar 25, 2025  1:08:16 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushBack':
list.c:68:39: error: 'return' with a value, in function returning void [-Werror]
     if (list->current == NULL) return NULL;
                                       ^~~~
list.c:67:6: note: declared here
 void pushBack(List * list, void * data) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
41b8a8d
Tue, Mar 25, 2025  1:08:43 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
0bbac6b
Tue, Mar 25, 2025  1:10:14 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
2fd03e7
Tue, Mar 25, 2025  1:11:04 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
16b3aa7
Wed, Mar 26, 2025 11:10:22 AM: 
./test.sh: line 26: gcc: command not found
Compilation failed
39b2b3b
Wed, Mar 26, 2025 11:10:39 AM: 
./test.sh: line 26: gcc: command not found
Compilation failed
391f563
Fri, Mar 28, 2025 10:01:14 AM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
d28f841
Fri, Mar 28, 2025 10:06:09 AM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
283c968
Fri, Mar 28, 2025 10:07:16 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
3c85380
Fri, Mar 28, 2025 10:17:00 AM: 
 list.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:55:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list->tail = NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
76e5c14
Fri, Mar 28, 2025 10:17:39 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
af09733
Fri, Mar 28, 2025 10:44:24 AM: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
a84e09b
Fri, Mar 28, 2025 10:55:18 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:83:23: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list->current =! list->tail)
                       ^
list.c:83:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list->current =! list->tail)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
c827a20
Fri, Mar 28, 2025 10:56:01 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:83:29: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list->current->next =! NULL)
                             ^
list.c:83:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list->current->next =! NULL)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
d2ea189
Fri, Mar 28, 2025 10:57:15 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
8b78da6
Fri, Mar 28, 2025 11:01:30 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d17473b
Fri, Mar 28, 2025 11:06:36 AM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
8aa019f
Fri, Mar 28, 2025 11:11:28 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
5db07f0
Fri, Mar 28, 2025 11:20:21 AM: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
cf3c79b
Fri, Mar 28, 2025 11:23:14 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
49b947e
